# BitchX-rs

./: .gitignore  AGENTS.md  COPYRIGHT  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
plugins/greet/: Cargo.toml
plugins/greet/src/: lib.rs
plugins/hello/: Cargo.toml
plugins/hello/src/: lib.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/irc/: channel.rs  client.rs  command.rs  connection.rs  ctcp.rs  dcc.rs  encrypt.rs  flood.rs  message.rs  mod.rs  mode.rs  user.rs
src/plugin/: loader.rs  macros.rs  mod.rs
src/scripting/: engine.rs
src/ui/: ansi_art.rs  app.rs  input.rs  mod.rs  theme.rs
src/ui/widgets/: chat.rs  input_bar.rs  mod.rs  nick_list.rs  status_bar.rs
