[workspace]
members = [".", "plugins/hello", "plugins/greet"]

[package]
name = "bitchx"
version = "2.0.0-rs"
edition = "2021"
description = "BitchX IRC client - relay (リレー) release candidate"
license = "BSD-3-Clause"
readme = "README.md"

[[bin]]
name = "bitchx"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dirs = "6"
libloading = "0.8"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
blowfish = "0.9"
cbc = "0.1"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
regex = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
